<resources>
    <string name="app_name">Personal Finance Manager</string>

    <string name="plusMoney">\u002B%1$s</string>
    <string name="minusMoney">\u002D%1$s</string>
    <string name="expense">Expense</string>
    <string name="revenue">Revenue</string>
    <string name="enter_category_name_and_description">Enter category name and description</string>
    <string name="name">Name</string>
    <string name="description">Description</string>
    <string name="choose_type_of_operation">Choose type of operation</string>
    <string name="add_category">Add Category</string>
    <string name="fill_in_all_fields">Fill in all fields!</string>
    <string name="category_name_with_colon">Category name:</string>
    <string name="type_of_operation_with_colon">Type of operation:</string>
    <string name="amount_of_money_with_colon">Amount of money:</string>
    <string name="amount">Amount</string>
    <string name="description_with_colon">Description:</string>
    <string name="description_of_transaction">Description of Transaction</string>
    <string name="date_with_colon">Date:</string>
    <string name="date_example">05/01/2023</string>
    <string name="add_transaction">Add Transaction</string>
    <string name="all_categories">All Categories</string>
    <string name="no_data">No data</string>
    <string name="choose_category">Choose Category</string>
    <string name="details">Details</string>
    <string name="category">Category</string>
    <string name="category_name_example">Category name</string>
    <string name="type">Type</string>
    <string name="type_of_operation_example">Type of operation</string>
    <string name="amount_of_money_example">Amount of money</string>
    <string name="date">Date</string>
    <string name="description_example">Some description</string>
    <string name="update">Update</string>
    <string name="delete">Delete</string>
    <string name="finance_manager">Finance Manager</string>
    <string name="date_year_example">2023</string>
    <string name="date_month_example">01</string>
    <string name="expenses">Expenses</string>
    <string name="money_example">10000</string>
    <string name="revenues">Revenues</string>
    <string name="balance">Balance</string>
    <string name="profile_picture_description">Profile picture description</string>
    <string name="your_profile">Your profile</string>
    <string name="configure_categories">Configure categories</string>
    <string name="share_with_friends">Share with friends</string>
    <string name="rate_our_app">Rate our App</string>
    <string name="settings">Settings</string>
    <string name="notes">Notes</string>
    <string name="diagrams">Diagrams</string>
    <string name="reports">Reports</string>
    <string name="profile">Profile</string>
    <string name="choose_type">Choose type</string>
    <string name="update_transaction_info">Update transaction info</string>

    <string-array name="types">
        <item>@string/expenses</item>
        <item>@string/revenues</item>
    </string-array>
</resources>