<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragments.add_note.AddNoteFragment">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/categoriesToolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/card_green"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:title="@string/fill_in_all_fields"
        app:titleCentered="true"
        app:titleTextColor="@color/black" />

    <TextView
        android:id="@+id/prefixCategoryNameTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="26dp"
        android:layout_marginEnd="10dp"
        android:text="@string/category_name_with_colon"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@id/categoryNameEditText"
        app:layout_constraintEnd_toStartOf="@id/categoryNameEditText"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/categoriesToolbar"
        app:layout_goneMarginEnd="10dp" />

    <EditText
        android:id="@+id/categoryNameEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="26dp"
        android:enabled="false"
        android:fontFamily="casual"
        android:gravity="center"
        android:hint="@string/name"
        android:text=""
        android:textColor="@color/card_green"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/prefixCategoryNameTextView"
        app:layout_constraintTop_toBottomOf="@id/categoriesToolbar" />


    <TextView
        android:id="@+id/prefixTypeOfOperationTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="38dp"
        android:layout_marginEnd="10dp"
        android:gravity="center_horizontal"
        android:text="@string/type_of_operation_with_colon"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@id/expenseTextView"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/prefixCategoryNameTextView" />


    <TextView
        android:id="@+id/expenseTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        android:background="@drawable/background_operation"
        android:text="@string/expense"
        android:textColor="@color/gray"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="@id/prefixTypeOfOperationTextView"
        app:layout_constraintEnd_toStartOf="@id/revenueTextView"
        app:layout_constraintStart_toEndOf="@id/prefixTypeOfOperationTextView"
        app:layout_constraintTop_toTopOf="@id/prefixTypeOfOperationTextView" />

    <TextView
        android:id="@+id/revenueTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/background_operation"
        android:text="@string/revenue"
        android:textColor="@color/gray"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="@id/expenseTextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/expenseTextView"
        app:layout_constraintTop_toTopOf="@id/expenseTextView" />

    <TextView
        android:id="@+id/prefixAmountOfMoneyTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="38dp"
        android:layout_marginEnd="10dp"
        android:gravity="center_horizontal"
        android:text="@string/amount_of_money_with_colon"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@id/amountOfMoneyEditText"
        app:layout_constraintEnd_toStartOf="@id/amountOfMoneyEditText"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/prefixTypeOfOperationTextView" />

    <EditText
        android:id="@+id/amountOfMoneyEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="38dp"
        android:fontFamily="casual"
        android:gravity="center"
        android:hint="@string/amount"
        android:inputType="number"
        android:maxLength="8"
        android:textColor="@color/card_green"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@id/prefixAmountOfMoneyTextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/prefixAmountOfMoneyTextView"
        app:layout_constraintTop_toBottomOf="@id/prefixTypeOfOperationTextView" />

    <TextView
        android:id="@+id/prefixDescriptionTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="38dp"
        android:gravity="center_horizontal"
        android:text="@string/description_with_colon"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/prefixAmountOfMoneyTextView"
        app:layout_goneMarginEnd="10dp" />

    <EditText
        android:id="@+id/descriptionEditText"
        android:layout_width="360dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:ellipsize="end"
        android:fontFamily="casual"
        android:gravity="center"
        android:hint="@string/description_of_transaction"
        android:inputType="textMultiLine"
        android:maxLength="100"
        android:maxLines="5"
        android:minLines="3"
        android:text=""
        android:textColor="@color/card_green"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/prefixDescriptionTextView" />

    <TextView
        android:id="@+id/prefixDatePicker"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="6dp"
        android:text="@string/date_with_colon"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@id/datePicker"
        app:layout_constraintEnd_toStartOf="@id/datePicker"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/datePicker"
        app:layout_goneMarginEnd="10dp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/datePicker"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:clickable="true"
        android:focusable="true"
        android:fontFamily="casual"
        android:foreground="?android:attr/selectableItemBackground"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/date_example"
        android:textColor="@color/black"
        android:textSize="22sp"
        android:textStyle="bold"
        android:theme="@android:style/ThemeOverlay.Material.Dark"
        app:backgroundTint="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/prefixDatePicker"
        app:layout_constraintTop_toBottomOf="@id/descriptionEditText" />


    <com.google.android.material.button.MaterialButton
        android:id="@+id/addTransactionButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:clickable="true"
        android:focusable="true"
        android:fontFamily="casual"
        android:foreground="?android:attr/selectableItemBackground"
        android:gravity="center"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:padding="10dp"
        android:text="@string/add_transaction"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        android:theme="@android:style/ThemeOverlay.Material.Dark"
        app:backgroundTint="@color/card_green"
        app:cornerRadius="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/datePicker" />

</androidx.constraintlayout.widget.ConstraintLayout>