<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/item_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="?android:attr/selectableItemBackground">

    <TextView
        android:id="@+id/categoryNameTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:ellipsize="end"
        android:fontFamily="@font/google_sans_bold"
        android:maxLines="1"
        android:text="@string/category_name_example"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintEnd_toStartOf="@+id/typeOfOperation"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/typeOfOperation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:fontFamily="@font/google_sans_bold"
        android:text="@string/expense"
        android:textColor="@color/card_red"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/categoryNameTextView" />

    <TextView
        android:id="@+id/categoryDescriptionTextView"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_marginTop="8dp"
        android:ellipsize="end"
        android:fontFamily="@font/google_sans_medium"
        android:maxLines="1"
        android:text="@string/description_example"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@id/typeOfOperation"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@id/categoryNameTextView"
        app:layout_constraintTop_toBottomOf="@id/categoryNameTextView" />


</androidx.constraintlayout.widget.ConstraintLayout>