<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragments.all_categories.AllCategoriesSheetFragment">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/allCategoriesToolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/card_green"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:title="@string/all_categories"
        app:titleCentered="true"
        app:titleTextColor="@color/black" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/allCategoriesRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@id/createCategoryButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/allCategoriesToolbar" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="800dp"
        app:layout_constraintBottom_toBottomOf="@id/createCategoryButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/allCategoriesToolbar" />

    <ImageView
        android:id="@+id/noDataImageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_no_data"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/noDataTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/no_data"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/noDataImageView" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/createCategoryButton"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:clickable="true"
        android:focusable="true"
        android:fontFamily="@font/google_sans_regular"
        android:foreground="?android:attr/selectableItemBackground"
        android:gravity="center"
        android:padding="10dp"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        app:cornerRadius="0dp"
        android:text="@string/add_category"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:theme="@android:style/ThemeOverlay.Material.Dark"
        app:backgroundTint="@color/card_green"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>